<resources>
    <string name="app_name">KashDAddy</string>
    <string name="default_web_client_id">908145330554-7hfm2kqegaju3orllohf2jtsace2eu1g.apps.googleusercontent.com</string>
    <string name="amount">Amount</string>
    <string name="_9_99">9.99</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="date">Date</string>
    <string name="to_from">To/From</string>
    <string name="description">Description</string>
    <string name="transaction_overview">Transaction Overview</string>
    <string name="transaction_title">Transaction Title</string>
    <string name="_8_august">8 August</string>
    <string name="_123_45">$123.45</string>
    <string name="category">Category</string>
    <string name="all">All</string>
    <string name="received">Received</string>
    <string name="spent">Spent</string>
    <string name="reminders">Reminders:</string>
    <string name="upcoming_bills">Upcoming Bills</string>
    <string name="enter_upcoming_bill">Enter upcoming bill</string>
    <string name="miakhalifa_what_com">miakhalifa@what.com</string>
    <string name="mia_khalifa">Mia Khalifa</string>
    <string name="english">English</string>
    <string name="welcome_onboard">Welcome Onboard!</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_surname">Enter Surname</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_fingerprint_by_placing_it_on_the_scanner">Register fingerprint by placing it on the scanner</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_use_email_and_password_instead">or use email and password instead.</string>
    <string name="use_touch_id_to_sign_into_account">Use Touch ID to sign into account</string>
    <string name="welcome_back">Welcome Back!!</string>
    <string name="register_an_account">Register An Account</string>
    <string name="remember_me">Remember me</string> <!-- Corrected spelling -->
    <string name="add">+\n</string>
    <string name="plus">+</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="notifications">Notifications</string>
    <string name="update_settings">Update Settings</string>
    <string name="log_out">Log Out</string>
    <string name="app_lock">App Lock</string>
    <string name="change_password">Change Password</string>
    <string name="security_and_privacy">Security and Privacy</string>
    <string name="language">Language</string>
    <string name="expense_limit">Expense Limit</string>
    <string name="budget_preferences">Budget Preferences</string>
    <string name="budget_category">Budget Category</string>
    <string name="preferences">Preferences</string>
    <string name="save">Save</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="amount_needed">Amount Needed</string>
    <string name="date_selected">Date Selected:Null</string>
    <string name="expense_alerts" />
    <string name="enable_reminders" />
    <string name="supabase_url">https://zvsttixrednvsvguesfl.supabase.co</string>
    <string name="supabase_anon_key">"\"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inp2c3R0aXhyZWRudnN2Z3Vlc2ZsIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MjcyOTI4NTQsImV4cCI6MjA0Mjg2ODg1NH0.He5aDBr4AGa2SG7lqSt8ej_nyyXWO50U_3sAVyNiW30\"\n    "</string>
    <string name="dashboard">Dashboard</string>
    <string name="transactions">Transactions</string>
    <string name="goals">Goals</string>
    <string name="statistics">Statistics</string>
    <string name="resources">Resources</string>
    <string name="settings">Settings</string>
</resources>
